--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,19 @@
 <%= form_for @book, remote: true, html: { style: "display:inline;" } do |f| %>
 
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@book.errors.count, "error") %> prohibited
+        this data from being saved:
+      </h2>
+      <ul>
+        <% @book.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="modal-body">
       <div class="form-group">
         <p>
