--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,6 @@
 <% if user_signed_in? %>
   <div class="well">
       <%= link_to 'Entry new data', new_book_path, remote: true, class: "btn btn-primary" %>
-      <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new">
-          Entry new data
-      </button> -->
   </div>
 
   <div class="page-header">
@@ -33,8 +30,8 @@
             <td><%= book.address %></td>
             <td><%= book.number %></td>
             <td><%= book.email %></td>
-          <% if can? :look, Book %>
-            <td><%= book.user.email %></td>
+          <% if can? :look, User %>
+            <td><%= link_to book.user.email, edit_user_path(book.user.id), remote: true %></td>
           <% end %>
             <td><%= link_to "Edit", edit_book_path(book), remote: true, class: "btn btn-warning", id:"edit" %></td>
           <% if can? :destroy, Book %>
